--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "local": "cp ./envs/env_local ./.env && NODE_ENV=local nodemon server.js",
+    "local": "cp ./envs/env_local ./.env && NODE_ENV=local nodemon index.js",
     "local_migrations": "cp ./envs/env_local ./.env && NODE_ENV=local node_modules/.bin/sequelize db:migrate",
-    "dev": "cp ./envs/env_dev ./.env && NODE_ENV=development nodemon server.js",
+    "dev": "cp ./envs/env_dev ./.env && NODE_ENV=development nodemon index.js",
     "dev_migrations": "cp ./envs/env_dev ./.env && NODE_ENV=development node_modules/.bin/sequelize db:migrate",
-    "prod": "cp ./envs/env_prod ./.env && NODE_ENV=production nodemon server.js",
+    "prod": "cp ./envs/env_prod ./.env && NODE_ENV=production nodemon index.js",
     "prod_migrations": "cp ./envs/env_prod ./.env && NODE_ENV=development node_modules/.bin/sequelize db:migrate"
   },
   "author": "Andrew Galloway",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "config": "^3.3.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
